updated the files

--- a/address.html
+++ b/address.html
@@ -1,1 +1,7 @@
-this file is to specify the address of company , ( email, location, other contact information )
+<html>
+<body>
+<h3>Address</h3>
+<pre> manjuTechs,Bangalore,560020 </pre>
+</body>
+</html>
+
