--- a/home.html
+++ b/home.html
@@ -1,1 +1,6 @@
-sample file
+<html>
+<body>
+<h2>manjuTechs</h2>
+<p> the instiute which provides devops tutorial with real time examples </p>
+</body>
+</html>
