updated the email and location

--- a/address.html
+++ b/address.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h3>Address</h3>
-<pre> manjuTechs,Bangalore,560020 </pre>
+<pre> manjuTechs,Bangalore,560021,Email: manjutech@gmail.com </pre>
 </body>
 </html>
 
