--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h2>manjuTechs</h2>
-<p> the instiute which provides devops tutorial with real time examples </p>
+<p> the instiute which provides devops tutorial with real time practical examples </p>
 </body>
 </html>
