--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h2>About</h2>
-<p> we teach devops and cloud technologies </p>
+<p> we teach devops and cloud technologies... </p>
 </body>
 </html>
