modified the feature

--- a/side-menu.html
+++ b/side-menu.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h3>Side-Menu</h3>
-<pre> here you will see the side menu options  </pre>
+<pre> here you will see the side menu options and features  </pre>
 </body>
 </html>
